# fast_api_test

./: .env  api_layer.py  classes.py  email_agent.py  email_config_example.txt  env_example.txt  main.py  pyproject.toml  test_email_sending.py  test_tools.py  tools.py
company_resources/: email_response_guide.txt  general_info.txt  prislista.txt
src/: classes.py  email_agent.py  tools.py
